[package]
name = "single-token-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.10.0", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "5.7.1"
serde_json = "1.0.138"

[dev-dependencies]
rand = "0.9.0"
rand_pcg = "0.9.0"

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true
