[package]
name = "single-token-farm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
uint = { version = "0.10.0", default-features = false }
near-sdk = { version = "5.8.0", features = ["unit-testing"] }
near-contract-standards = "5.8.0"
serde_json = "1.0.138"
borsh = "1.5.3"

[dev-dependencies]
rand = "0.9.0"
rand_pcg = "0.9.0"

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true
